2004-08-19  Shane Landrum <epicene@pobox.com>

	* en/Gtk/RowHasChildToggledArgs.xml
	* en/Gtk/RowInsertedArgs.xml
	* en/Gtk/RowChangedArgs.xml
	* en/Gtk/RowDeletedArgs.xml: Docs for event 
	argument classes related to ListStore.
	* en/Gtk/ListStore.xml: minor wording fixes.
	
2004-08-18  Shane Landrum <epicene@pobox.com>

	* en/Gtk/ListStore.xml: Added docs.
	
2004-08-13  Shane Landrum <epicene@pobox.com>

	* DragBeginArgs.xml
	* DragDataDeleteArgs.xml
	* DragDataGetArgs.xml
	* DragDataReceivedArgs.xml
	* DragDropArgs.xml
	* DragEndArgs.xml
	* DragLeaveArgs.xml
	* DragMotionArgs.xml: Filled in event properties.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/Widget.xml: Filled in some event information,
	removed a lot of extraneous "To be added" in remarks fields

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/TextAppearance.xml
	* en/Gtk/TextAttributes.xml: Classes to control text presentation.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeCellDataFunc.xml
	* en/Gtk/TreeDataList.xml
	* en/Gtk/TreeDestroyCountFunc.xml
	* en/Gtk/TreeIter.xml
	* en/Gtk/TreeIterCompareFunc.xml
	* en/Gtk/TreeModel.xml
	* en/Gtk/TreeModelForeachFunc.xml
	* en/Gtk/TreeSelectionFunc.xml
	* en/Gtk/TreeSortable.xml
	* en/Gtk/TreeView.xml: Various updates to tree object docs.
	
2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/*Args.xml: Documented many handler arguments classes.

2004-08-13  Shane Landrum <epicene@pobox.com>

	* en/Gtk/HTML.xml
	* en/Gtk/HTMLCommandType.xml
	* en/Gtk/HTMLFontStyle.xml
	* en/Gtk/HTMLParagraphAlignment.xml
	* en/Gtk/HTMLSaveReceiverFn.xml: documented HTML widget classes.
	
2004-08-08  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* en/Gtk/AccelGroup.xml
	* en/Gtk/AccelGroupEntry.xml
	* en/Gtk/AccelKey.xml
	* en/Gtk/RcProperty.xml
	* en/Gtk/TreeDragSource.xml: Fixed errors in tags, make assemble now works.
	
2004-08-05  Shane Landrum <epicene@pobox.com>

	* en/Gtk/Rc*: Filled in all "to be added" for RC-file