@@ -58,9 +58,9 @@
         <ReturnType>System.Int32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'int'</returns>
-        <remarks>To be added</remarks>
+        <summary>The new order of the rows.</summary>
+        <returns>A <see cref="T:System.Int32" /></returns>
+        <remarks>FIXME: shouldn't this be an array?</remarks>
       </Docs>
     </Member>
     <Member MemberName="Iter">
@@ -70,9 +70,9 @@
         <ReturnType>Gtk.TreeIter</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.TreeIter'</returns>
-        <remarks>To be added</remarks>
+        <summary>Gets a pointer to the <see cref="T:Gtk.TreeNode"/> whose rows have been reordered.</summary>
+        <returns>A <see cref="Gtk.TreeIter"/></returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Path">
@@ -82,9 +82,9 @@
         <ReturnType>Gtk.TreePath</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.TreePath'</returns>
-        <remarks>To be added</remarks>
+        <summary>A path for the <see cref="T:Gtk.TreeNode"/> whose rows have been reordered.</summary>
+        <returns>A <see cref="Gtk.TreePath"/></returns>
+        <remarks />
       </Docs>
     </Member>
   </Members>
