@@ -39,9 +39,9 @@
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'bool'</returns>
-        <remarks>To be added</remarks>
+        <summary>Whether or not to start editing the specified row.</summary>
+        <returns>A <see cref="T:System.Boolean"/>, true if editing should start.</returns>
+        <remarks />
       </Docs>
     </Member>
   </Members>
