@@ -524,7 +524,7 @@ class TreeSelectionSample
       <Docs>
         <summary>Protected constructor.</summary>
         <returns>a <see cref="T:Gtk.TreeSelection" /></returns>
-        <remarks>To be added</remarks>
+        <remarks />
       </Docs>
     </Member>
   </Members>
