@@ -7,8 +7,10 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A delegate class for functions that can be run on every element
+    of a <see cref="T:Gtk.TreeSelection"/>.</summary>
+    <remarks>See <see cref="M:Gtk.TreeSelection.SelectedForeach"/> for how to
+    invoke a delegate of this type.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
