@@ -943,7 +943,7 @@ public class TreeViewDemo {
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Fired when the row the cursor is on is selected.</summary>
         <remarks />
       </Docs>
     </Member>
