@@ -1,5 +1,15 @@
 2004-08-19  Shane Landrum <epicene@pobox.com>
 
+	Docs for tree-related classes:
+	* en/Gtk/TreeView.xml
+	* en/Gtk/TreeSelection.xml
+	* en/Gtk/TreeSelectionForeachFunc.xml: Added docs for tree operations.
+	* en/Gtk/RowsReorderedArgs.xml: Event data for list/tree datamodels.
+	* en/Gtk/SelectCursorRowArgs.xml: Event data for TreeView event.
+	* en/Gtk/TreeSelection.xml: Cleanup of extraneous TBA.
+
+2004-08-19  Shane Landrum <epicene@pobox.com>
+
 	* en/Gtk/RowHasChildToggledArgs.xml
 	* en/Gtk/RowInsertedArgs.xml
 	* en/Gtk/RowChangedArgs.xml
